Replace URL with URI.toURL
See: 12bfde77491d19896a7967b82e6ad52be0ca332c for argumentation